--- a/Exercícios/Site 01/index.html
+++ b/Exercícios/Site 01/index.html
@@ -14,7 +14,8 @@
             
      
  <header> 
-    <h1>A origem dos Lobos </h1>
+    <h1> A  ORIGEM  DOS  LOBOS </h1>
+ </header>
 
      <nav>
          <a class="link" href="#">Home</a>
@@ -23,7 +24,7 @@
          <a class="link" href="#">Ajuda</a>
      </nav>
 
- </header>
+
 
 <main>
   
