--- a/Exercícios/Site 01/index.html
+++ b/Exercícios/Site 01/index.html
@@ -18,10 +18,11 @@
  </header>
 
      <nav>
-         <a class="link" href="#">Home</a>
-         <a class="link" href="#">Menu</a>
-         <a class="link" href="#">Curiosidades</a>
-         <a class="link" href="#">Ajuda</a>
+          <ul>
+            <li><a class="link" href="#">Home</a></li>
+            <li><a class="link"  href="#">Central</a></li>
+            <li><a class="link" href="#">Ajuda</a></li>
+          </ul>
      </nav>
 
 
@@ -43,6 +44,8 @@
     <p> As espécies variam em porte, com a menor existente sendo o lobo-dourado, vivente no continente africano e o maior sendo o lobo-cinza, vivente   do Hemisfério Norte. Uma listagem mais concreta será efetuada, listando da maior para a menor espécie.</p>
 
    <p>Para saber mais, basta clicar aqui.  </p> 
+
+    <picture><img src="Imagens/Lobo.jpg" alt="Lobo"></picture>
         
 </article>
 </main>
