--- a/Exercícios/poesia/poesia.html
+++ b/Exercícios/poesia/poesia.html
@@ -18,7 +18,7 @@
         </p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -32,7 +32,7 @@
 
 
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -45,7 +45,7 @@
     </section>
 
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -68,7 +68,7 @@
     </section>
 
 
-    <section>
+    <section class="imagem">
 
         <p>
             Tenho saudade das cartas <br>
@@ -83,7 +83,7 @@
 
 
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
@@ -105,9 +105,6 @@
     </section>
 
 
-    <footer>
-        <p>Síte criado por Henrique Gois.</p>
-    </footer>
+   <footer> Síte criado por Henrique Gois.</footer>
 </body>
-
 </html>
