--- a/Exercícios/poesia/poesia.html
+++ b/Exercícios/poesia/poesia.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-    <h1>Cordel Moderno</h1>
+      <h1> Cordel Moderno</h1>
         <p>
             Por
             <a href="https://www.recantodasletras.com.br/poesias/3186743]" target="_blank">Milton Duarte </a>
@@ -32,7 +32,7 @@
 
 
 
-    <section class="imagem">
+    <section class="imagem" id="img1">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -68,8 +68,8 @@
     </section>
 
 
-    <section class="imagem">
-
+    <section class="imagem" id="img2">
+       
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
